--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,25 +5,10 @@ spring:
     suffix: .html
     prefix: classpath:/templates/
   datasource:
-    url: jdbc:mysql://localhost:3306/jspblog?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/db_blog?useUnicode=true&characterEncoding=utf-8
     username: root
-    password:
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      max-wait: 60000
-      time-between-eviction-runs-millis: 300000
-      validation-query: select 1 from DUAL
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      #      配置监控统计拦截的filters，去掉后监控界面sql无法统计，wall用于防火墙
-      filters: stat,slf4j,wall
-      max-pool-prepared-statement-per-connection-size: 20
-      use-global-data-source-stat: true
-      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMills=500
+    password: 123456
+
   mvc:
     view:
       prefix: classpath:/templates/
